Update storage system, using the global storage by TreexClans 3.1